# openskill

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  release.yml
docs/: command-reference.md  user-manual.md
examples/: arithmetic.il  control-flow.il  fibonacci.il  hello.il  list-manipulation.il  lists.il  ports.il  procedure.il  state-machine.il  string-processing.il
scripts/: launch_cli.py  launch_ide.py
src/openskill/: __init__.py  __main__.py  _metadata.py  _version.py  cli.py
src/openskill/api/: __init__.py  catalog.json
src/openskill/apifinder/: __init__.py  index.py
src/openskill/ide/: __init__.py  editor_support.py  fileio.py  window.py
src/openskill/interpreter/: __init__.py  errors.py  evaluator.py  forms.py  lexer.py  parser.py  runtime.py
src/openskill/runtime/: __init__.py  repl.py
src/openskill/ui/: __init__.py  app.py
tests/: __init__.py  test_catalog.py  test_cli.py  test_ide_support.py  test_interpreter.py
