# Author: Soham Sen <sensoham135@gmail.com> <sohamsen2000@outlook.com>

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openskill"
dynamic = ["version"]
description = "Standalone SKILL interpreter and offline learning workbench"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "sohamxda7", email = "sensoham135@gmail.com"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
openskill = "openskill.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openskill = ["api/catalog.json"]

[tool.setuptools.dynamic]
version = {attr = "openskill._version.__version__"}
